fix #23748: NPE: Reverse way direction: Automatic tag correction (furter already expected regrression from r19101) - don't use Map.ofEntries() when map may contain null keys or values
I try to write a unit test for this as well

git-svn-id: https://josm.openstreetmap.de/svn/trunk@19124 0c6e7542-c601-0410-84e7-c038aed88b3b